<resources>
    <string name="app_name">RateMe</string>
    <string name="title_scan">Scan</string>
    <string name="title_history">History</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_settings">Settings</string>
    <string name="username">Username</string>
    <string name="SignUpUpperCase">SIGNUP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="loginUpperCase">LOGIN</string>
    <string name="forget_your_password">Forget Your Password?</string>
    <string name="signUpLowercase">SingUp</string>
    <string name="loginLowerCase">Login</string>
    <string name="rateMe">RateMe</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to register</string>
    <string name="about_us">About Us</string>
    <string name="Developer">Developer: \n Emircan Tutar \n Leon Muss \n\nLogo Design: \n Zehra Gümüs \n\n\n Version: 1.0\n\n</string>
    <string name="logo">Logo</string>
    <string name="copyright">Copyright © 2024 Emircan Tutar, Leon Muss.All rights reserved.</string>
    <string name="logout_button">Logout Button</string>
    <string name="user_name">User Name</string>
    <string name="comment">Here is the Comment</string>
    <string name="delete_button">Delete Button</string>
    <string name="new_user_name">New Username</string>
    <string name="ok">OK</string>
    <string name="history">History</string>
    <string name="permissions">Permissions</string>
    <string name="camera">Camera Permission</string>
    <string name="user_icon">User Icon</string>
    <string name="current_user">currentUser</string>
    <string name="email_address">Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="benutzer_field">Benutzer field</string>
    <string name="profile_information">Profile Information</string>
    <string name="give_a_rating">Give a Rating:</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="submit_comment">Submit Comment</string>
    <string name="product_image">Product_Image</string>
    <string name="no_image_available">No Image Available</string>
    <string name="adds_product_to_favourites">Adds_Product_to_Favourites</string>
    <string name="scan_a_product">Scan a Product to get more Details</string>
    <string name="average_rating">Average Rating:</string>
    <string name="rate_product">Rate Product</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="settings">Settings</string>
    <string name="delete_button2">Delete button</string>
    <string name="loading">Loading...</string>
    <string name="scan">Scan</string>
    <string name="comments_and_ratings">Rate and Comment</string>
    <string name="comments">Comments</string>
    <string name="welcome_picture">Welcome Picture</string>
    <string name="signupimage">SignUpImage</string>
    <string name="loginimage">LoginImage</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="change_profile">Change Profile Picture</string>
</resources>