<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_headlines"
        android:padding="10dp"
        android:text="@string/comments_and_ratings"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/give_a_rating"
                    android:textSize="18sp" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:numStars="5"
                    android:stepSize="0.5" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSubmitRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/submit_rating" />

            <EditText
                android:id="@+id/commentEditText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_your_comment"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:overScrollMode="always"
                android:scrollbars="vertical" />

            <Button
                android:id="@+id/submitCommentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/submit_comment" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_headlines"
                android:padding="10dp"
                android:text="@string/comments"
                android:textSize="20sp"
                android:textStyle="bold" />
            <!-- RecyclerView für Kommentare -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/commentsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>