<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/background_image"
    android:orientation="horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:paddingStart="8dp"
        android:paddingTop="2dp"
        android:paddingEnd="40dp"
        android:text="@string/user_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/commentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNameTextView"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:paddingTop="2dp"
        android:text="@string/comment"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/deleteButton"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_gravity="end"
        android:layout_marginStart="-35dp"
        android:layout_toEndOf="@+id/commentTextView"
        android:background="@drawable/background_btn"
        android:contentDescription="@string/delete_button"
        android:src="@drawable/ic_delete"
        android:visibility="gone" />

</RelativeLayout>
